--- a/Swimmer_customer/app/src/main/res/values/colors.xml
+++ b/Swimmer_customer/app/src/main/res/values/colors.xml
@@ -5,6 +5,9 @@
     <color name="tagColor_gray">#D5D5D5</color>
     <color name="green">#90EE90</color>
     <color name="seed">#414BB2</color>
+    <color name="colorPrimary">#4953BB</color>
+    <color name="colorSecondary">#4F56A9</color>
+    <color name="colorNeutral">#FFFBFF</color>
     <color name="md_theme_light_primary">#4953BB</color>
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_primaryContainer">#E0E0FF</color>
