--- a/Swimmer_customer/app/src/main/res/layout/fragment_delivery_point_manage.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_delivery_point_manage.xml
@@ -20,4 +20,21 @@
         android:layout_height="wrap_content"
         android:text="주소 찾기" />
 
+    <TextView
+        android:id="@+id/textViewAddressName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/textViewAddress"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <TextView
+        android:id="@+id/textViewAddressPhone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
 </LinearLayout>
