--- a/Swimmer_customer/app/src/main/res/layout/fragment_register.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_register.xml
@@ -149,7 +149,7 @@
 
                 <!-- Chips can be declared here, or added dynamically. -->
                 <com.google.android.material.chip.Chip
-                    android:id="@+id/swimExp1"
+                    android:id="@+id/isDefaultDeliveryPoint"
                     style="@style/Widget.Material3.Chip.Suggestion"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
