--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_add.xml
@@ -296,11 +296,11 @@
             android:text="@string/action_cancel" />
 
         <Button
-            android:id="@+id/buttonOK"
+            android:id="@+id/buttonNext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/action_register" />
+            android:text="다음" />
 
     </LinearLayout>
 
