Feat : android veil 라이브러리 적용, 구매하기 버튼 Bottom Sheet Dialog 완성

--- a/Swimmer_customer/app/src/main/res/values/colors.xml
+++ b/Swimmer_customer/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="gray_cc">#cccccc</color>
     <color name="tagColor_gray">#D5D5D5</color>
     <color name="green">#90EE90</color>
     <color name="colorPrimary">#4953BB</color>
