--- a/Swimmer_customer/app/src/main/res/layout/activity_product_detail_viewpage2.xml
+++ b/Swimmer_customer/app/src/main/res/layout/activity_product_detail_viewpage2.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/productDetailImageView"
+            android:id="@+id/productDetailImage"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
