--- a/Swimmer_customer/app/src/main/res/layout/fragment_product_detail.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_product_detail.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.petpal.swimmer_customer.ui.product.ProductViewModel" />
@@ -39,170 +40,146 @@
                 app:contentScrim="@color/white"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
+                <com.skydoves.androidveil.VeilLayout
+                    android:id="@+id/veilLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="match_parent"
+                    app:veilLayout_baseAlpha="0.6"
+                    app:veilLayout_baseColor="@color/gray_cc"
+                    app:veilLayout_dropOff="0.5"
+                    app:veilLayout_highlightAlpha="1.0"
+                    app:veilLayout_highlightColor="@color/white"
+                    app:veilLayout_radius="6dp"
+                    app:veilLayout_shimmerEnable="true"
+                    app:veilLayout_veiled="true">
 
-                    <FrameLayout
-                        android:id="@+id/viewPager2Container"
-                        android:layout_width="300dp"
-                        android:layout_height="300dp"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent">
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
 
-                        <androidx.viewpager2.widget.ViewPager2
-                            android:id="@+id/itemDetailViewPager2"
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent" />
+                        <FrameLayout
+                            android:id="@+id/viewPager2Container"
+                            android:layout_width="300dp"
+                            android:layout_height="300dp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
 
-                        <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-                            android:id="@+id/dots_indicator"
+                            <androidx.viewpager2.widget.ViewPager2
+                                android:id="@+id/itemDetailViewPager2"
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent" />
+
+                            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
+                                android:id="@+id/dots_indicator"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="bottom|center"
+                                android:layout_marginBottom="30dp"
+                                app:dotsColor="@color/white"
+                                app:dotsCornerRadius="8dp"
+                                app:dotsSize="8dp"
+                                app:dotsSpacing="4dp"
+                                app:dotsWidthFactor="2.5"
+                                app:progressMode="false"
+                                app:selectedDotColor="@color/colorSecondary" />
+
+                        </FrameLayout>
+
+                        <TextView
+                            android:id="@+id/brandTextView"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="bottom|center"
-                            android:layout_marginBottom="30dp"
-                            app:dotsColor="@color/white"
-                            app:dotsCornerRadius="8dp"
-                            app:dotsSize="8dp"
-                            app:dotsSpacing="4dp"
-                            app:dotsWidthFactor="2.5"
-                            app:progressMode="false"
-                            app:selectedDotColor="@color/colorSecondary" />
+                            android:layout_marginTop="5dp"
+                            android:text="@{vm.rankingBrand}"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="@id/viewPager2Container"
+                            app:layout_constraintTop_toBottomOf="@id/viewPager2Container" />
 
-                    </FrameLayout>
-
-                    <TextView
-                        android:id="@+id/brandTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="@{vm.rankingBrand}"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@id/viewPager2Container"
-                        app:layout_constraintTop_toBottomOf="@id/viewPager2Container" />
-
-                    <TextView
-                        android:id="@+id/itemTitleTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="@{vm.rankingTitle}"
-                        android:textColor="@color/black"
-                        android:textSize="15sp"
-                        app:layout_constraintStart_toStartOf="@id/viewPager2Container"
-                        app:layout_constraintTop_toBottomOf="@id/brandTextView" />
-
-                    <TextView
-                        android:id="@+id/priceTextView"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="5dp"
-                        android:text="@{vm.rankingPrice}"
-                        android:textColor="@color/black"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        app:layout_constraintStart_toStartOf="@id/viewPager2Container"
-                        app:layout_constraintTop_toBottomOf="@id/itemTitleTextView" />
-
-                    <ImageButton
-                        android:id="@+id/downloadImageButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@android:color/transparent"
-                        android:src="@drawable/download_24px"
-                        app:layout_constraintBottom_toBottomOf="@id/priceTextView"
-                        app:layout_constraintEnd_toEndOf="@id/viewPager2Container" />
-
-                    <HorizontalScrollView
-                        android:id="@+id/hashTagScrollView"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:scrollbars="none"
-                        app:layout_constraintEnd_toEndOf="@id/downloadImageButton"
-                        app:layout_constraintStart_toStartOf="@id/priceTextView"
-                        app:layout_constraintTop_toBottomOf="@id/downloadImageButton">
-
-                        <LinearLayout
-                            android:id="@+id/hashTagLayout"
+                        <TextView
+                            android:id="@+id/itemTitleTextView"
                             android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="horizontal"
-                            tools:layout_height="30dp">
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="@{vm.rankingTitle}"
+                            android:textColor="@color/black"
+                            android:textSize="15sp"
+                            app:layout_constraintStart_toStartOf="@id/viewPager2Container"
+                            app:layout_constraintTop_toBottomOf="@id/brandTextView" />
 
-                            <com.google.android.material.chip.ChipGroup
-                                android:id="@+id/hashTagChipGroup"
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent">
+                        <TextView
+                            android:id="@+id/priceTextView"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:text="@{vm.rankingPrice}"
+                            android:textColor="@color/black"
+                            android:textSize="18sp"
+                            android:textStyle="bold"
+                            app:layout_constraintStart_toStartOf="@id/viewPager2Container"
+                            app:layout_constraintTop_toBottomOf="@id/itemTitleTextView" />
 
-                                <com.google.android.material.chip.Chip
-                                    android:id="@+id/hashTagChip1"
-                                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:backgroundTint="@android:color/transparent"
-                                    android:text="#수영복" />
+                        <ImageButton
+                            android:id="@+id/downloadImageButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:background="@android:color/transparent"
+                            android:src="@drawable/download_24px"
+                            app:layout_constraintBottom_toBottomOf="@id/priceTextView"
+                            app:layout_constraintEnd_toEndOf="@id/viewPager2Container" />
 
-                                <com.google.android.material.chip.Chip
-                                    android:id="@+id/chip_option2"
-                                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:backgroundTint="@android:color/transparent"
-                                    android:text="#수영모" />
+                        <HorizontalScrollView
+                            android:id="@+id/hashTagScrollView"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:scrollbars="none"
+                            app:layout_constraintEnd_toEndOf="@id/downloadImageButton"
+                            app:layout_constraintStart_toStartOf="@id/priceTextView"
+                            app:layout_constraintTop_toBottomOf="@id/downloadImageButton">
 
-                                <com.google.android.material.chip.Chip
-                                    android:id="@+id/chip_option3"
-                                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:backgroundTint="@android:color/transparent"
-                                    android:text="#수영모" />
+                            <LinearLayout
+                                android:id="@+id/hashTagLayout"
+                                android:layout_width="wrap_content"
+                                android:layout_height="match_parent"
+                                android:orientation="horizontal"
+                                tools:layout_height="30dp">
 
-                                <com.google.android.material.chip.Chip
-                                    android:id="@+id/chip_option4"
-                                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:backgroundTint="@android:color/transparent"
-                                    android:text="#수영모" />
+                                <com.google.android.material.chip.ChipGroup
+                                    android:id="@+id/hashTagChipGroup"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent"
+                                    android:backgroundTint="@android:color/transparent">
 
-                                <com.google.android.material.chip.Chip
-                                    android:id="@+id/chip_option5"
-                                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:backgroundTint="@android:color/transparent"
-                                    android:text="#수영모" />
 
-                            </com.google.android.material.chip.ChipGroup>
-                        </LinearLayout>
-                    </HorizontalScrollView>
+                                </com.google.android.material.chip.ChipGroup>
+                            </LinearLayout>
+                        </HorizontalScrollView>
 
-                    <View
-                        android:id="@+id/view2"
+                        <View
+                            android:id="@+id/view2"
+                            android:layout_width="match_parent"
+                            android:layout_height="1dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:background="@android:color/black"
+                            app:layout_constraintTop_toBottomOf="@id/hashTagScrollView" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+
+                    <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/toolbarProductDetail"
                         android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_marginTop="10dp"
-                        android:layout_marginBottom="10dp"
-                        android:background="@android:color/black"
-                        app:layout_constraintTop_toBottomOf="@id/hashTagScrollView" />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                        android:layout_height="?attr/actionBarSize"
+                        android:layout_marginBottom="6dp"
+                        android:background="@color/colorNeutral"
+                        android:theme="@style/HomeToolbarTheme"
+                        app:elevation="6dp"
+                        app:layout_collapseMode="pin" />
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/toolbarProductDetail"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:layout_marginBottom="6dp"
-                    android:background="@color/colorNeutral"
-                    android:theme="@style/HomeToolbarTheme"
-                    app:elevation="6dp"
-                    app:layout_collapseMode="pin" />
+                </com.skydoves.androidveil.VeilLayout>
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
-
 
             <com.google.android.material.tabs.TabLayout
                 android:id="@+id/productDetailTabLayout"
@@ -231,10 +208,10 @@
                 android:layout_height="match_parent"
                 android:adjustViewBounds="true"
                 android:background="#E8FFFFFF"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 android:src="@drawable/favorite_24px"
-                app:layout_constraintStart_toStartOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/paymentButton"
