--- a/Swimmer_customer/app/src/main/res/layout/fragment_payment.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_payment.xml
@@ -36,6 +36,32 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:theme="@style/Theme.Swimmer_customer" />
 
+            <LinearLayout
+                android:id="@+id/paymentDeliveryPointLayout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/paymentDeliveryPointName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/paymentDeliveryPoinAddress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone" />
+
+                <TextView
+                    android:id="@+id/paymentDeliveryPointPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="휴대폰 번호 : "
+                    android:visibility="gone" />
+            </LinearLayout>
+
             <Button
                 android:id="@+id/paymentDeliveryButton"
                 style="@style/Base.Theme.Swimmer_customer"
