--- a/Swimmer_customer/app/src/main/res/layout/item_delivery_point.xml
+++ b/Swimmer_customer/app/src/main/res/layout/item_delivery_point.xml
@@ -28,17 +28,17 @@
                 android:layout_marginTop="15dp"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-            <com.google.android.material.chip.Chip
-                android:id="@+id/isDefaultDeliveryPoint"
-                style="@style/Widget.Material3.Chip.Suggestion"
-                android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textViewIsDefaultDeliveryPoint"
+                android:layout_width="75dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="15dp"
-                android:checkable="false"
-                android:clickable="false"
-                android:focusable="false"
-                android:text="기본 배송지" />
+                android:background="@drawable/border_layout"
+                android:text="기본 배송지"
+                android:textAlignment="center"
+                android:visibility="gone" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -54,7 +54,7 @@
                 android:layout_marginLeft="15dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <CheckBox
                 android:id="@+id/checkboxDefaultDeliveryPoint"
@@ -64,7 +64,8 @@
                 android:layout_marginLeft="40dp"
                 android:button="@null"
                 android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
-                android:text="기본 배송지" />
+                android:text="기본 배송지"
+                android:textAlignment="textEnd" />
         </LinearLayout>
 
         <LinearLayout
@@ -79,16 +80,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_weight="1"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Small" />
 
             <Button
                 android:id="@+id/ButtonDeleteDeliveryPoint"
                 style="@style/Widget.Material3.Button.OutlinedButton"
                 android:layout_width="120dp"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="45dp"
+                android:layout_marginLeft="60dp"
                 android:backgroundTint="@color/colorPrimary"
                 android:text="배송지 삭제"
+                android:textAlignment="viewEnd"
                 android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
