--- a/Swimmer_seller/app/src/main/res/layout/layout_bottom_sheet_option.xml
+++ b/Swimmer_seller/app/src/main/res/layout/layout_bottom_sheet_option.xml
@@ -4,56 +4,49 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:orientation="vertical">
 
     <com.google.android.material.bottomsheet.BottomSheetDragHandleView
         android:id="@+id/view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/textViewColorTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:text="색상 선택"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:layout_height="50dp" />
 
     <LinearLayout
-        android:id="@+id/linearLayoutColor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="10dp">
+
+        <TextView
+            android:id="@+id/textViewColorTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:text="색상 선택"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chipGroupColor"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:contentDescription="오렌지"
+            app:chipSpacingVertical="0dp">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
-                android:maxHeight="50dp"
-                android:minHeight="50dp"
+                android:contentDescription="레드"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="@android:color/holo_red_dark" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                app:checkedIconEnabled="true"
-                app:chipBackgroundColor="#F44336" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="오렌지"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="#FF5722" />
 
@@ -62,6 +55,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="옐로우"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="@android:color/holo_orange_light" />
 
@@ -70,22 +64,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="라이트그린"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="@android:color/holo_green_light" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checkable="true"
-                app:checkedIconEnabled="true"
-                app:chipBackgroundColor="@android:color/holo_green_dark" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="그린"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="#009688" />
 
@@ -94,6 +82,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="라이트블루"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="#00BCD4" />
 
@@ -102,6 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="블루"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="#2196F3" />
 
@@ -110,6 +100,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="네이비"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="#3F51B5" />
 
@@ -118,6 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="퍼플"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="#673AB7" />
 
@@ -126,47 +118,63 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="핑크"
                 app:checkedIconEnabled="true"
-                app:chipBackgroundColor="#9C27B0" />
+                app:chipBackgroundColor="#EF79D2" />
 
             <com.google.android.material.chip.Chip
-                android:id="@+id/chip14"
+                android:id="@+id/chip7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="아이보리"
                 app:checkedIconEnabled="true"
-                app:chipBackgroundColor="#000000" />
+                app:chipBackgroundColor="#F4DBB3" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:contentDescription="브라운"
+                app:checkedIconEnabled="true"
+                app:chipBackgroundColor="#B55726" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
+                android:contentDescription="화이트"
                 app:checkedIconEnabled="true"
                 app:chipBackgroundColor="#FFFFFF" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chip14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checkable="true"
+                android:contentDescription="블랙"
+                app:checkedIconEnabled="true"
+                app:chipBackgroundColor="#000000" />
+
         </com.google.android.material.chip.ChipGroup>
-    </LinearLayout>
 
-    <TextView
-        android:id="@+id/textViewSizeTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="10dp"
-        android:text="사이즈 선택"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-
-    <LinearLayout
-        android:id="@+id/linearLayoutSize"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="5dp">
+        <TextView
+            android:id="@+id/textViewSizeTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="10dp"
+            android:text="사이즈 선택"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/chipGroupSize"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            app:chipSpacingVertical="0dp">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip2"
@@ -225,15 +233,17 @@
                 app:checkedIconEnabled="true" />
 
         </com.google.android.material.chip.ChipGroup>
-    </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonAddOption"
-        style="@style/Widget.Material3.Button.OutlinedButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="left"
-        android:layout_marginTop="5dp"
-        android:text="추가" />
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/buttonAddOption"
+            style="@style/Widget.Material3.Button.OutlinedButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:layout_marginTop="5dp"
+            android:text="추가"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 </LinearLayout>
