--- a/Swimmer_seller/app/src/main/res/layout/row_product_option.xml
+++ b/Swimmer_seller/app/src/main/res/layout/row_product_option.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:padding="10dp">
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
 
     <TextView
-        android:id="@+id/textViewColor"
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewOption"
+        style="@style/Widget.Material3.Button.IconButton.Outlined"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        android:textAlignment="viewStart" />
 
-    <TextView
-        android:id="@+id/textViewSize"
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/buttonDeleteOption"
+        style="@style/Widget.Material3.Button.IconButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="TextView"
-        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+        app:icon="@drawable/close_24px" />
+
 </LinearLayout>
