--- a/Swimmer_seller/app/src/main/res/layout/fragment_product_option.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_product_option.xml
@@ -24,6 +24,13 @@
             app:title="상품등록"
             app:titleTextColor="@color/white" />
 
+        <com.google.android.material.progressindicator.LinearProgressIndicator
+            android:id="@+id/progressBarOption"
+            style="@style/Widget.Material3.LinearProgressIndicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:visibility="invisible" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
