--- a/Swimmer_seller/app/src/main/res/layout/layout_bottom_sheet_option.xml
+++ b/Swimmer_seller/app/src/main/res/layout/layout_bottom_sheet_option.xml
@@ -82,9 +82,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checkable="true"
-                android:contentDescription="라이트블루"
+                android:contentDescription="스카이블루"
                 app:checkedIconEnabled="true"
-                app:chipBackgroundColor="#00BCD4" />
+                app:chipBackgroundColor="#68D4FF" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip10"
