feat, build: 주문상세 기능구현
- OrderManageFragment에서 특정 order만 navigation통해 OrderDetailFragment로 넘기도록
구현
- Order, Item Parcelable로 변경
- Long으로 변경된 부분 반영

--- a/Swimmer_seller/app/src/main/res/layout/fragment_order_detail.xml
+++ b/Swimmer_seller/app/src/main/res/layout/fragment_order_detail.xml
@@ -19,7 +19,6 @@
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:overScrollMode="never"
         android:fillViewport="true">
 
         <LinearLayout
@@ -200,7 +199,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/reyclerViewOrderProductList"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:nestedScrollingEnabled="false" />
 
