--- a/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -70,6 +70,10 @@
         android:id="@+id/item_order_detail"
         android:name="com.petpal.swimmer_seller.ui.order.OrderDetailFragment"
         android:label="fragment_order_detail"
-        tools:layout="@layout/fragment_order_detail" />
+        tools:layout="@layout/fragment_order_detail" >
+        <argument
+            android:name="order"
+            app:argType="com.petpal.swimmer_seller.data.model.Order" />
+    </fragment>
 
 </navigation>
