--- a/Swimmer_customer/app/src/main/res/layout/fragment_detail_address.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_detail_address.xml
@@ -32,7 +32,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewApiAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
