refactor: OrderManageFragment, OrderDetailFragment 사이 idx만 주고받도록 수정

--- a/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
+++ b/Swimmer_seller/app/src/main/res/navigation/fragment_nav_graph.xml
@@ -72,8 +72,8 @@
         android:label="fragment_order_detail"
         tools:layout="@layout/fragment_order_detail" >
         <argument
-            android:name="order"
-            app:argType="com.petpal.swimmer_seller.data.model.Order" />
+            android:name="orderIdx"
+            app:argType="integer" />
     </fragment>
 
 </navigation>
