Feat : HomeFragment viewPager2  자동 스크롤 + 애니메이션 추가

--- a/Swimmer_customer/app/src/main/res/layout/fragment_home.xml
+++ b/Swimmer_customer/app/src/main/res/layout/fragment_home.xml
@@ -58,6 +58,7 @@
 
                             <androidx.viewpager2.widget.ViewPager2
                                 android:id="@+id/itemDetailViewPager2"
+                                android:orientation="horizontal"
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent" />
 
