--- a/Swimmer_customer/app/src/main/res/layout/ranking_item.xml
+++ b/Swimmer_customer/app/src/main/res/layout/ranking_item.xml
@@ -6,7 +6,7 @@
 
     </data>
 
-    <androidx.cardview.widget.CardView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
@@ -20,31 +20,52 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
             <ImageView
                 android:id="@+id/rankingImageView"
-                android:layout_width="100dp"
-                android:layout_height="70dp"
-                android:adjustViewBounds="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:adjustViewBounds="true"
                 android:background="@color/white"
-                android:scaleType="fitXY" />
+                android:backgroundTint="@color/gray_cc"
+                android:scaleType="centerInside" />
+
+
+            <TextView
+                android:id="@+id/rankingBrand"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="예제1"
+                android:textColor="@color/gray_8A"
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/rankingTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:maxLines="2"
+                android:layout_gravity="start"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
                 android:ellipsize="end"
+                android:maxLines="1"
                 android:text="예제1" />
 
             <TextView
                 android:id="@+id/rankingDescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="예제2" />
+                android:layout_gravity="start"
+                android:layout_marginStart="10dp"
+                android:text="예제2"
+                android:textColor="@color/black"
+                android:textStyle="bold" />
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </layout>
