--- a/Swimmer_customer/app/src/main/res/values/colors.xml
+++ b/Swimmer_customer/app/src/main/res/values/colors.xml
@@ -3,8 +3,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_cc">#cccccc</color>
+    <color name="gray_8A">#8A8A8A</color>
     <color name="tagColor_gray">#D5D5D5</color>
     <color name="green">#90EE90</color>
+    <color name="sky_blue">#76D7EA</color>
     <color name="colorPrimary">#4953BB</color>
     <color name="colorSecondary">#4F56A9</color>
     <color name="colorTertiary">#934B00</color>
